# stay-the-course

./: .gitignore  .travis.yml  Cargo.toml  README.md  example.gnucash  example.sqlite3  example_config.toml
.github/workflows/: ci.yaml
data/: classified.csv
example/: sqlite3.gnucash
src/: allocation.rs  assets.rs  compounding.rs  config.rs  dateutil.rs  decutil.rs  gnucash.rs  main.rs  quote.rs  rebalance.rs  stats.rs
