[package]
name = "stay_the_course"
version = "0.1.0"
authors = ["David Cain <davidjosephcain@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "^0.4.31", features = ["serde"] }
csv = "^1"
lexpr = "^0.2.4"
num = "^0.4.0"
quick-xml = "^0.22.0"
rusqlite = "^0.24.0"
rust_decimal = "^1"
serde = "^1"
serde_derive = "^1"
toml = "^0.5"
uuid = { version = "0.8", features = ["v4"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.108"
